--- a/articles/24cc0207217bfe.md
+++ b/articles/24cc0207217bfe.md
@@ -144,3 +144,11 @@ run:
     fi
     echo "" > coverage.txt
 ```
+
+# 参考文献
+
+CircleCiの公式ドキュメント
+https://circleci.com/docs/ja/
+
+CircleCiではなく、GitHub Actions を用いて差分実行をしたい場合は、こちらの記事が参考になります。
+https://zenn.dev/mitsugu/articles/6f4b5f1be6b20a
