--- a/articles/24cc0207217bfe.md
+++ b/articles/24cc0207217bfe.md
@@ -1,5 +1,5 @@
 ---
-title: "CircleCi上でgo言語のユニットテストを差分実行をする方法"
+title: "CircleCi上でgo言語のユニットテストを差分実行する方法"
 emoji: "📙"
 type: "tech"
 topics: [go, test]
