ブランチで条件分岐する理由を明記

--- a/articles/24cc0207217bfe.md
+++ b/articles/24cc0207217bfe.md
@@ -51,8 +51,10 @@ published: false
 # 差分実行にする方法
 ## ブランチ名は環境変数$CIRCLE_BRANCH で取得
 
+masterブランチなどのルートブランチでは保守性と品質確保の観点から、全てのユニットテストを実行したいです。
+一方で、それ以外のフィーチャーブランチやトピックブランチでは、開発の高速化のために、変更箇所にのみテストを実行したいです。
 CircleCi では、環境変数[$CIRCLE_BRANCH](https://circleci.com/docs/ja/variables/)で現在のブランチ名を取得することができます。
-$CIRCLE_BRANCH を用いて、master ブランチかどうかを判定します。
+従って、$CIRCLE_BRANCH を用いて、master ブランチかどうかを判定します。
 
 ```yaml
 if [ "$CIRCLE_BRANCH" = "master" ]; then
