--- a/articles/24cc0207217bfe.md
+++ b/articles/24cc0207217bfe.md
@@ -39,7 +39,7 @@ published: false
 上記のコマンドによって、カレントディレクトリ以下の全てのパッケージをテスト実行し、カバレッジを取得することができます。
 以下に、上記コマンドの重要な部分を抜粋します。
 - `go list ./...`：カレントディレクトリ以下の全てのパッケージパスを取得する
-- `go test "$package_path"`：取得したパッケージをテスト実行する。ファイル名やパッケージ名を指定することもできる。
+- `go test "$package_path"`：取得したパッケージパスをテスト実行する。ファイル名やパッケージ名を指定することもできる。
 
 `go test`に以下のオプションを指定しています。
   - `-v`：テスト実行時に詳細なログを出力する
@@ -60,7 +60,7 @@ CircleCi では、環境変数[$CIRCLE_BRANCH](https://circleci.com/docs/ja/vari
 if [ "$CIRCLE_BRANCH" = "master" ]; then
     echo "Branch is master"
 else
-    echo "Branch is neither master nor production"
+    echo "Branch is not master"
 fi
 ```
 
