--- a/articles/4b717a23726a0b.md
+++ b/articles/4b717a23726a0b.md
@@ -20,20 +20,27 @@ published: false
 LLMを用いてLLMに関する記事の要約をする。
 
 ## シーケンス
-```plantuml
-@startuml
-actor User
-participant "Webブラウザ" as Browser
-participant "サーバ" as Server
-participant "LLMシステム" as LLMSystem
-
-User -> Browser: 記事の要約をリクエスト
-Browser -> Server: 要約リクエストを送信
-Server -> LLMSystem: 要約生成リクエスト
-LLMSystem -> Server: 要約結果を返す
-Server -> Browser: 要約結果を返す
-Browser -> User: 要約結果を表示
-@enduml
+```mermaid
+sequenceDiagram
+    autonumber
+    actor お客様
+    participant form as 申し込みフォーム
+    participant s3 as 申込書補保管S3
+    participant admin as 管理システム
+    お客様->>form: サービス申し込み
+    Note left of form: 申込書
+    form->>s3: 申込書保存
+    Note left of s3: 申込書
+    form->>お客様: 受付処理中連絡
+    s3->>s3: FSSによる申込書マルウェアチェック
+    s3->>admin: 申込書マルウェアチェック完了通知
+    admin->>s3: 申込書取得リクエスト
+    s3->>admin: 申込書取得レスポンス
+    Note left of admin: 申込書
+    admin->>admin: 申込書バリデーションチェック
+    admin->>admin: 申込情報登録
+    admin->>お客様: 受付完了連絡
+```
 
 
 
