--- a/articles/4b717a23726a0b.md
+++ b/articles/4b717a23726a0b.md
@@ -2,22 +2,19 @@
 title: "LLMに関する技術ブログをLLMを使って要約する"
 emoji: "⛳"
 type: "tech"
-topics: [llm, ollama, Phi-3, tech]
+topics: [Python, llm, ollama, Phi-3, tech, LINEmessagingAPI]
 published: false
 ---
 
 ## 背景
 
 こんにちは。株式会社ハウテレビジョンで外資就活ドットコムの開発をしているohiraです。
+皆さんは日常的に技術ブログを読んでいますか？
+私はあまり読めていません。
+通勤時間などを利用して読むようには心がけてはいるのですが、音楽や動画に夢中になってしまうことが多いです。
 
-<!-- 私は、弊社に入社してから約1年半の間、技術負債解消を主な業務とするチームに所属し、cakePHPで書かれていた外資就活ドットコムのコードをフロントエンドはNext.js、バックエンドはGo言語に書き換えるプロジェクトなどに携わってきました。そして、遂に今年の夏頃にユーザーが使う画面のリプレイスを完了させることができました。 -->
-
-私は、弊社に入社してから約2年間、技術負債解消を主な業務とするチームに所属し、ユーザーが使う画面のリプレイスなどをやってきましたが、この先外資就活ドットコムの成長に貢献するためには、新しい技術を取り入れていくことが必要だと考えています。
-そこで、今更ではありますが、まずはプロンプトエンジニアリングのノウハウを身につけようと思いました。
-
-
-## ゴール
-LLMを用いてLLMに関する記事の要約をする。
+そこで、興味のある分野の技術ブログのみを要約して目につきやすいLINE通知をすることで、技術ブログを読む習慣をつけようと思いました。
+本記事では、Qiita APIを用いて技術ブログを取得し、ローカルLLMを用いて要約を行い、LINE通知をする方法を紹介します。
 
 ## シーケンス
 ```mermaid
@@ -27,18 +24,64 @@ sequenceDiagram
     participant python as pythonファイル
     participant qiita as Qiita API
     participant llm as ollama
+    participant line as LINE API
     自分->>python: 実行
     python->>qiita: 記事取得リクエスト
     qiita->>python: 記事取得レスポンス
     python->>llm: 要約リクエスト
     llm->>python: 要約レスポンス
-    python->>自分: 要約結果
+    python->>line: 要約結果をLINE通知
+    line->>自分: 通知完了
+```
+
+## Qiita APIを用いて技術ブログを取得
+
+Qiitaは公式でAPIを提供しており、記事の取得や投稿が可能です。
+`query`を指定することで、特定の条件に合致する記事を取得することができます。
+今回は、`LLM`タグがついた記事を取得するために`tag:LLM`を、昨日の記事を取得するために`created:>={yesterday} and created:<{today}`を指定しました。
+
+
+```python
+def fetch_qiita_articles():
+    token = "token" # Qiita APIのアクセストークン
+    url = f'https://qiita.com/api/v2/items'
+    headers = {
+        "Authorization":"Bearer " + token
+    }
+    today = datetime.datetime.now().strftime('%Y-%m-%d')
+    yesterday = (datetime.datetime.now() - datetime.timedelta(days=1)).strftime('%Y-%m-%d')
+
+    # LLMタグがついた昨日の間に作成された記事を取得
+    query = f'tag:LLM and created:>={yesterday} and created:<{today}'
+    params = {
+        "page":1,
+        "per_page":1,
+        "query":query
+    }
+    res = requests.get(url,params = params,headers = headers)
+    data = res.json()
+    
+    return data
 ```
 
 
+## ローカルLLMを用いて要約
+今回ローカルLLMを選定した理由は、無料で利用したかったのと、単純に触ってみたかったからです。
+
+環境構築は、同僚の開発ブログを参考にしました。
+https://blog.howtelevision.co.jp/entry/2024/05/31/101918
+
+モデルは、`Phi-3`を選定しました。
+低容量なので処理が速く、そのうえ精度も高いとのことで、今回の開発には十分だと判断しました。
 
 
 
 
+## 参考記事
+Qiita API
+- https://qiita.com/api/v2/docs
+- https://qiita.com/yonex/items/d3ade7c1ae9897536b28
 
 
+ローカルLLM
+- https://zenn.dev/headwaters/articles/bf621b14fb688b
