--- a/articles/4b717a23726a0b.md
+++ b/articles/4b717a23726a0b.md
@@ -23,7 +23,7 @@ sequenceDiagram
     actor 自分
     participant python as pythonファイル
     participant qiita as Qiita API
-    participant llm as ollama
+    participant llm as ollama server
     participant line as LINE API
     自分->>python: 実行
     python->>qiita: 記事取得リクエスト
@@ -34,7 +34,7 @@ sequenceDiagram
     line->>自分: 通知完了
 ```
 
-## Qiita APIを用いて技術ブログを取得
+## Qiita API
 
 Qiitaは公式でAPIを提供しており、記事の取得や投稿が可能です。
 
@@ -67,7 +67,7 @@ def fetch_qiita_articles():
 ```
 
 
-## ローカルLLMを用いて要約
+## ollama server
 今回ローカルLLMを選定した理由は、無料で利用したかったのと、単純に触ってみたかったからです。
 
 環境構築は、同僚の開発ブログを参考にしました。
@@ -76,7 +76,19 @@ https://blog.howtelevision.co.jp/entry/2024/05/31/101918
 モデルは、`Phi-3`を選定しました。
 低容量なので処理が速く、そのうえ精度も高いとのことで、今回の開発には十分だと判断しました。
 
+```python
+def get_ollama_response(input):
+  response = ollama.chat(model='phi3', messages=[
+    {
+        'role': 'user',
+        'content': '以下のLLMに関する技術ブログを300文字以内の日本語で要約してください。\n' + "要約して欲しい記事のタイトルは「"+ input["title"] + '」です。\n' + "要約して欲しい記事の内容は「" + input["body"] + '」です。',
+    },
+  ])
+  return response
+```
 
+
+## 
 
 
 ## 参考記事
