--- a/articles/4b717a23726a0b.md
+++ b/articles/4b717a23726a0b.md
@@ -1,6 +1,5 @@
 ---
-title: "LLMに関する技術ブログをLLMを使って要約する"
-emoji: "⛳"
+title: "技術ブログをLLMで要約してLINE通知する"
 type: "tech"
 topics: [Python, llm, ollama, Phi-3, tech, LINEmessagingAPI]
 published: false
@@ -24,7 +23,7 @@ sequenceDiagram
     participant python as pythonファイル
     participant qiita as Qiita API
     participant llm as ollama server
-    participant line as LINE API
+    participant line as LINEmessagingAPI
     自分->>python: 実行
     python->>qiita: 記事取得リクエスト
     qiita->>python: 記事取得レスポンス
@@ -88,14 +87,41 @@ def get_ollama_response(input):
 ```
 
 
-## 
+## LINEmessagingAPI
+LINE通知をするための方法として、LINE Notifyというものがあるのですが、なんともうじきサービス終了とのことで、今回はLINE messaging APIを利用しました。
+
+![alt text](image.png)
+
+```python
+def push(text):
+  url = "https://api.line.me/v2/bot/message/push"
+  headers = {
+    "Content-Type" : "application/json; charset=UTF-8",
+    'Authorization': 'Bearer ' + "{アクセストークン}"
+  }
+
+  postData = {
+    "to" : "{ユーザーID}",
+    "messages" : [
+      {
+        'type':'text',
+        'text':text,
+      }
+    ]
+  }
+
+  return requests.post(url, headers=headers, data=json.dumps)
+```
 
 
 ## 参考記事
 Qiita API
-- https://qiita.com/api/v2/docs
-- https://qiita.com/yonex/items/d3ade7c1ae9897536b28
+https://qiita.com/api/v2/docs
+https://qiita.com/yonex/items/d3ade7c1ae9897536b28
 
 
 ローカルLLM
-- https://zenn.dev/headwaters/articles/bf621b14fb688b
+https://zenn.dev/headwaters/articles/bf621b14fb688b
+
+LINE messaging API
+https://qiita.com/wanwan_fox/items/8c535ad2532a2030e341
