--- a/articles/4b717a23726a0b.md
+++ b/articles/4b717a23726a0b.md
@@ -33,7 +33,7 @@ published: false
 sequenceDiagram
     autonumber
     actor 自分
-    participant python as pythonファイル
+    participant python as Pythonファイル
     participant qiita as Qiita API
     participant llm as ollama server
     participant line as LINEmessagingAPI
