--- a/articles/4b717a23726a0b.md
+++ b/articles/4b717a23726a0b.md
@@ -1,8 +1,8 @@
 ---
 title: "技術ブログを読む習慣を身につけるための第一歩"
 type: "tech"
-emoji: "📙"
-topics: [Python,llm,ollama,Phi3,LINEmessagingAPI]
+emoji: "🤳"
+topics: [Python,llm,ollama,LINEmessagingAPI]
 published: false
 ---
 
